--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + Vue</title>
+    <script src="/EasyPlayer-lib.min.js"></script>
+    <script src="/EasyPlayer-element.min.js"></script>
+    <script src="/EasyPlayer.wasm"></script>
   </head>
   <body>
     <div id="app"></div>
